js/src/tests/test262/built-ins/Error/prototype/stack/getter-subclass.js



















var get = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').get;

for (var i = 0; i < nativeErrors.length; ++i) {
  var Ctor = nativeErrors[i];
  var Sub = class extends Ctor {};
  var e = new Sub('msg');

  assert.sameValue(typeof get.call(e), 'string', Ctor.name + ': subclass via get.call');
  assert.sameValue(typeof e.stack, 'string', Ctor.name + ': subclass via property access');
}

reportCompare(0, 0);
